--- a/client/src/menu/MainMenu.css
+++ b/client/src/menu/MainMenu.css
@@ -7,7 +7,7 @@ line-height: 140px;
 
 color: #C3DFB1;
 
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+text-shadow: 8px 8px 20px #557a4f;
 }
 
 body{
